# Q_Szarlotka

./: LICENSE  README.md  pyproject.toml
Actor_Critic/: __init__.py  actor.py  algorithm.py  config.py  critic.py  main.py  quantum_layer.py  testing.py  training.py
DQN/: __init__.py  agent.py  algorithm.py  config.py  main.py  quantum_network.py  replay_buffer.py  training.py  value_network.py
DQN/Classic/: Lunar_lander_classic_neuronal.ipynb
Game/: main.py
Game/models/: Classic_DQN_Model.pt  Quantum_Actor_Model.pt  Quantum_Critic_Model.pt  Quantum_DQN_Model.pt
executions/actor_critic_lunar_lander_20251026_020434/: Quantum_Actor_Model.pt  Quantum_Critic_Model.pt
executions/actor_critic_lunar_lander_20251026_023422/: Quantum_Actor_Model.pt  Quantum_Critic_Model.pt  training_metrics.npz
executions/dqn_cartpole_20251026_020506/: dqn_quantum_policy.pt  training_metrics.npz
executions/dqn_lunarlander_20251026_020440/: training_metrics.npz
